Use flex to ensure network name does not wrap.

--- a/ui/app/css/itcss/components/network.scss
+++ b/ui/app/css/itcss/components/network.scss
@@ -10,4 +10,5 @@
   text-rendering: geometricPrecision;
   font-family: 'DIN OT';
   font-size: 10px;
+  flex: 1 0 auto;
 }
